--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jira.js": "^5.1.1",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "openai": "^4.97.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.2.0",
+    "ts-jira-client": "github:aeolun/ts-jira-client",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
