--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.2",
+    "@supabase/supabase-js": "^2.49.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jira.js": "^5.1.1",
@@ -21,6 +23,7 @@
     "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.2.0",
     "ts-jira-client": "github:aeolun/ts-jira-client",
+    "zod": "^3.24.4",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
