--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@supabase/supabase-js": "^2.49.4",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
@@ -19,9 +22,11 @@
     "next": "15.3.1",
     "openai": "^4.97.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
     "ts-jira-client": "github:aeolun/ts-jira-client",
     "zod": "^3.24.4",
