--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "jira.js": "^5.1.1",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
-    "openai": "^4.97.0",
+    "openai": "^4.102.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
@@ -35,6 +35,7 @@
     "tailwind-merge": "^3.2.0",
     "ts-jira-client": "github:aeolun/ts-jira-client",
     "zod": "^3.24.4",
+    "zod-to-json-schema": "^3.24.5",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
