--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "insert-sprint": "ts-node --project tsconfig.local.json src/scripts/insertSprintFromJira.ts"
   },
   "dependencies": {
     "@heroui/spinner": "^2.2.16",
     "@heroui/system": "^2.4.15",
     "@heroui/theme": "^2.4.15",
+    "@prisma/client": "^6.8.2",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-slot": "^1.2.2",
@@ -20,6 +22,7 @@
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.12.1",
     "jira-connector": "^3.1.0",
     "jira.js": "^5.1.1",
@@ -43,8 +46,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "prisma": "^6.8.2",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.2.9",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
